adjusting padding and container on the home page

--- a/src/components/QuoteForm/QuoteForm.scss
+++ b/src/components/QuoteForm/QuoteForm.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@import '../../styles/_variables';
 
 
 
@@ -58,7 +58,7 @@
   display: flex;
   gap: 8px;
   opacity: 1;
-  padding: 20px 40px;
+  padding: 5% 10%;
   border-radius: 40px;
   background-color: $color;
   color: white;
@@ -73,13 +73,22 @@
 .quote-form__summary-box {
   width: 351px;
   height: 128px;
+  transform: rotate(0deg);
+  opacity: 1;
+  gap: 16px; /* Solo funciona si el elemento es flex o grid */
+}
+/*
+
+.quote-form__summary-box {
+  width: 351px;
+  height: 128px;
   display: flex;
   flex-direction: column;
   gap: 16px;
   transform: rotate(0deg);
   opacity: 1;
 }
-
+*/
 
 
 .quote-form__input-box {
@@ -92,6 +101,13 @@
 }
 
 
+.checks {
+  width: 351px;
+  height: 84px;
+  transform: rotate(0deg);
+  opacity: 1;
+  gap: 12px; /* Solo aplica si es un contenedor flex o grid */
+}
 
 .quote-form__label {
   font-family: $font-family;
