--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 /*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,3 +13,7 @@ code {
     monospace;
 }
 */
+body{
+
+  background-color: #F8F9FF
+}
