--- a/src/components/QuoteForm/QuoteForm.scss
+++ b/src/components/QuoteForm/QuoteForm.scss
@@ -22,7 +22,7 @@
   letter-spacing: 0.4px;
   vertical-align: middle;
 }
-.quoter-section h2 {
+.quoter-section-title {
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
@@ -67,6 +67,7 @@
   line-height: 24px;
   letter-spacing: 0.4px;
   text-align: center;
+  margin: 10px 0px;
 
 }
 
@@ -106,7 +107,7 @@
   height: 84px;
   transform: rotate(0deg);
   opacity: 1;
-  gap: 12px; /* Solo aplica si es un contenedor flex o grid */
+  padding: 10px 0px;  
 }
 
 .quote-form__label {
@@ -117,4 +118,24 @@
   font-weight: $font-weight;
   font-style: normal;
   vertical-align: bottom;
+  font-size: 10px;
+}
+
+
+.quote-form__dni{
+  padding: 10px 0px;
+}
+
+.form-select{
+  padding-right: 0rem;
+}
+@media (max-width : 576px) {
+
+  .quoter-section-title{
+    font-size: 28px;
+    //line-height: 50px;
+  }
+  .quote-form{
+    margin-top: 100px;
+  }
 }
