--- a/src/components/Headers/Header.scss
+++ b/src/components/Headers/Header.scss
@@ -2,12 +2,13 @@
 .header-container {
   
   width: 100%;
-  //width: 1360px;
   height: 64px;
-  display: flex;
+  display: grid;
   justify-content: space-between;
   opacity: 1;
   padding: 2px 120px;
+  grid-template-columns: 1fr 1fr;
+  
 }
 
 
@@ -17,10 +18,10 @@
   display: flex;
   gap: 24px;
   opacity: 1;
-}
+  }
 
 .header-title {
-  width: 305px;
+  width: 100%;
   height: 60px;
   display: flex;
   flex-direction: column;
@@ -29,7 +30,7 @@
   opacity: 1;
   padding-top: 20px;
   padding-bottom: 20px;
-}
+  }
 
 
 
@@ -67,4 +68,21 @@
   line-height: 20px;
   letter-spacing: 0.4px;
   text-align: right;
+}
+
+.header-title-flex{
+  display: flex;
+  justify-content: flex-end; 
+}
+
+
+
+@media (max-width : 576px) {
+  .header-container {
+    padding: 2px 2%;
+    
+  }
+  .texto-header{
+    display: none;
+  }
 }
