--- a/src/components/BannerSection/BannerSection.scss
+++ b/src/components/BannerSection/BannerSection.scss
@@ -9,11 +9,10 @@
 .quote-section{
     width: 100%;
     height: 640px;
-    display: grid;            /* Activa el flujo horizontal */
-    //ex-direction: row;        /* Por defecto, pero se puede declarar explícitamente */
-    gap: 8px;                   /* Espacio entre elementos */
-    align-items: center;        /* Alineación vertical dentro del contenedor */
-    justify-content: flex-start; /* Alineación horizontal: izquierda, centro, derecha */
+    display: grid;            
+    gap: 8px;                  
+    align-items: center;       
+    justify-content: flex-start; 
     grid-template-columns: 1fr 1fr;
 }
 
@@ -30,7 +29,7 @@
 .img {
   width: 480px;
   height: 560px;
-  display: flex;         // Necesario para que `gap` funcione
+  display: flex;         
   flex-direction: column;
   gap: 10px;
   transform: rotate(0deg);
@@ -40,7 +39,7 @@
 .quote-form__section {
   width: 696px;
   height: 628px;
-  display: flex;               // Necesario para que `gap` funcione
+  display: flex;               
   flex-direction: column;
   gap: 24px;
   transform: rotate(0deg);
@@ -62,7 +61,6 @@
     }
   @media (max-width : 576px) {
     grid-template-areas: "b a";
-    //padding: 2px 2%;
     
     .img-main {
       grid-area: a;
