--- a/src/components/Headers/Header.scss
+++ b/src/components/Headers/Header.scss
@@ -49,7 +49,7 @@
 .phone-header {
   width: 139px;
   height: 20px;
-  gap: 8px; // Solo válido en contextos de layout como flex o grid
+  gap: 8px; 
   transform: rotate(0deg);
   opacity: 1;
 }
@@ -63,7 +63,7 @@
 .phone-text{
 
   font-weight: 700;
-  font-style: normal; // 'Bold' no es válido como valor
+  font-style: normal; 
   font-size: 18px;
   line-height: 20px;
   letter-spacing: 0.4px;
