routing and plans screen

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@
 $font-family: 'BR Sonoma', sans-serif;
 $color: #03050F;
 $background-color: #F8F9FF;
+$background-color-timeline: #EDEFFC;
+$color-blue: #007aff;
 
 
 //input
