--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,26 @@
     display: flex;
     box-sizing: border-box;
 }
+
+.circule{
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timeline-title{
+
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-style: normal; /* 'Bold' no es válido aquí, ya está cubierto por font-weight */
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    padding: 0px 10px;
+
+}
