--- a/src/components/QuoteForm/QuoteForm.scss
+++ b/src/components/QuoteForm/QuoteForm.scss
@@ -93,7 +93,7 @@
 
 .checks {
   width: 351px;
-  height: 84px;
+  height: 100%;
   transform: rotate(0deg);
   opacity: 1;
   padding: 10px 0px;  
@@ -118,13 +118,55 @@
 .form-select{
   padding-right: 0rem;
 }
+
+.form-img-main , .quoter-desc-movil {
+  display: none;
+}
 @media (max-width : 576px) {
+  
+.form-img-main{
+  display: block;
+  width: 100%;
+  height: 100%;
+  }
+  .quote-img{
+    width: 100px;
+    height: 150px;
+  }
+
+  .quoter-desc{ 
+    display: none;
+  }
+  
+  .quoter-desc-movil{ 
+    display: block;
+    padding-top: 10px;
+  }
+  .form-row{
+    width: 100%;
+    display: grid;            
+    gap: 30px;                  
+    align-items: center;       
+    justify-content: flex-start; 
+    grid-template-columns: 1fr 1fr;
+  }
 
   .quoter-section-title{
     font-size: 28px;
     //line-height: 50px;
   }
-  .quote-form{
-    margin-top: 100px;
+  
+  .form-grid{
+    padding-top: 13%;
+    height: 100%;
+    
+  }
+  .quote-form__summary-box {
+    width: 100%;
+  }
+  .button-rounded{
+    width: 100%;
+    padding: 5% 0;
+    justify-content: center;
   }
 }
