--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $font-family: 'BR Sonoma', sans-serif;
 $color: #03050F;
 $background-color: #F8F9FF;
 $background-color-timeline: #EDEFFC;
-$color-blue: #007aff;
+$color-blue: #6464ff;
 
 
 //input
