--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+
+body{
+
+  background-color: #F8F9FF;
+}
 .container-main{
 
+    background-color: #F8F9FF;
     width: 100%;
     height: 100vh; /* Ocupa toda la altura visible del navegador */
     transform: rotate(0deg);
