--- a/src/components/BannerSection/BannerSection.scss
+++ b/src/components/BannerSection/BannerSection.scss
@@ -4,9 +4,12 @@
 .banner-container{
     font-family: $font-family;
     color: $color;
-
-
+    width: 100%;
+    display: inline-grid;
 }
+
+
+
 .quote-section{
     width: 100%;
     height: 640px;
