--- a/src/components/Timeline/Timeline.scss
+++ b/src/components/Timeline/Timeline.scss
@@ -1,6 +1,8 @@
 @import '../../styles/_variables';
 
-
+.timeline-desk{
+    display: block;
+  }
 .timeline-container{
     background-color: $background-color-timeline;
     display: flex;
@@ -23,8 +25,27 @@
   color: gray;
 }
 
-
-
 .disable{
     color: gray;
+}
+.timeline-movil{
+    display: none;
+}
+
+
+@media (max-width : 576px) {
+  .timeline-desk{
+    display: none;
+  }
+  .timeline-movil{
+    display: flex;
+  }
+  .header-container {
+    padding: 2px 10%;  
+  }
+  .texto-header{
+    display: none;
+  }
+
+
 }
